# bcflight

./: .gitignore  .gitmodules  BOM.ods  README.md  Toolchain-RaspberryPi.cmake  Toolchain-rpi.cmake  Toolchain-stm32.cmake  dshot.txt
controller_pc/: BlackBox.cpp  BlackBox.h  CMakeLists.txt  Config.cpp  Config.h  ControllerPC.cpp  ControllerPC.h  MainWindow.cpp  MainWindow.h  README.md  Stream.cpp  Stream.h  VideoEditor.cpp  VideoEditor.h  main.cpp  pcap_admin.sh  qcustomplot.cpp  qcustomplot.h  tinyxml2.cpp  tinyxml2.h
controller_pc/CMakeModules/: FindMP4V2.cmake  FindQScintilla2.cmake  FindShine.cmake
controller_pc/ui/: HStatusBar.cpp  HStatusBar.h  VideoViewer.cpp  VideoViewer.h  blackbox.ui  config.ui  mainWindow.ui  resources.qrc  videoEditor.ui
controller_rc/: CMakeLists.txt  Config.cpp  Config.h  DecodedImage.cpp  DecodedImage.h  README.md  RendererHUD.cpp  Stream.cpp  Stream.h  config.lua  main.cpp
controller_rc/ADCs/: MCP320x.cpp  MCP320x.h
controller_rc/ui/: GlobalUI.cpp  GlobalUI.h  MainWindow.cpp  MainWindow.h  calibrate.ui  camera.ui  data.qrc  main.ui  network.ui  rf24scanner.ui  settings.ui  window.ui
controller_rpi/: CMakeLists.txt  Config.cpp  Config.h  Controller.cpp  Controller.h  ControllerPi.cpp  ControllerPi.h  DecodedImage.cpp  DecodedImage.h  RendererHUD.cpp  RendererHUD.h  RendererHUDClassic.cpp  RendererHUDClassic.h  RendererHUDNeo.cpp  RendererHUDNeo.h  Stream.cpp  Stream.h  TODO.md  config_rc.lua  config_viewer.lua  decode.cpp  decode.h  hud_data.txt  main.cpp  spidev_test  spidev_test.c
controller_rpi/ADCs/: MCP320x.cpp  MCP320x.h
controller_rpi/data/: .directory  networks.txt
controller_rpi/hudtest/: Controller.h  RendererHUD.cpp  RendererHUD.h  RendererHUDClassic.cpp  RendererHUDClassic.h  RendererHUDNeo.cpp  RendererHUDNeo.h  Stream.cpp  Stream.h  main.cpp
controller_rpi/ui/: Globals.cpp  Globals.h  PageCalibrate.cpp  PageCalibrate.h  PageMain.cpp  PageMain.h  PageNetwork.cpp  PageNetwork.h  PagePID.cpp  PagePID.h  PageSettings.cpp  PageSettings.h
flight/: BlackBox.cpp  BlackBox.h  CMakeLists.txt  Config.cpp  Config.h  Console.cpp  Console.h  Controller.cpp  Controller.h  Controller_old.cpp  Debug.cpp  Debug.h  MadgwickAHRS.c  MadgwickAHRS.h  Main.cpp  Main.h  Matrix.cpp  Matrix.h  PowerThread.cpp  PowerThread.h  Quaternion.cpp  Quaternion.h  README.md  Recorder.cpp  Recorder.h  Slave.cpp  Slave.h  TODO.md  Vector.h  config.cmake  config.lua  config_old.lua  valgrind.sh  valgrind.suppress
flight/audio/: AlsaMic.cpp  AlsaMic.h  Microphone.cpp  Microphone.h
flight/boards/: README.md
flight/frames/: Frame.cpp  Frame.h  Multicopter.cpp  Multicopter.h  XFrame.cpp  XFrame.h  XFrameVTail.cpp  XFrameVTail.h
flight/links/: Link.cpp  Link.h  MultiLink.cpp  MultiLink.h  RawWifi.cpp  RawWifi.cpp_  RawWifi.h  SBUS.cpp  SBUS.h  SX127x.cpp  SX127x.h  Socket.cpp  Socket.h  nRF24L01.cpp  nRF24L01.h
flight/links_/: MultiLink.cpp  MultiLink.h  SBUS.cpp  SBUS.h  SX127x.cpp  SX127x.h  Socket.h  nRF24L01.h
flight/motors/: BrushlessPWM.cpp  BrushlessPWM.h  DShot.cpp  DShot.h  DShot600.cpp  DShot600.h  Generic.cpp  Generic.h  Generic400Hz.cpp  Generic400Hz.h  Motor.cpp  Motor.h  MotorProxy.cpp  MotorProxy.h  OneShot125.cpp  OneShot125.h  OneShot42.cpp  OneShot42.h  PWMProxy.cpp  PWMProxy.h  Servo.cpp  Servo.h
flight/peripherals/: DShotTelemetry.cpp  DShotTelemetry.h  LEDStrip.cpp  LEDStrip.h  SmartAudio.cpp  SmartAudio.h  WS2812.cpp  WS2812.h
flight/sensors/: ADCProxy.cpp  ADCProxy.h  ADS1015.cpp  ADS1015.h  Accelerometer.cpp  Accelerometer.h  Altimeter.cpp  Altimeter.h  BMP180.cpp  BMP180.h  BMP280.cpp  BMP280.h  CurrentSensor.cpp  CurrentSensor.h  GPS.cpp  GPS.h  Gyroscope.cpp  Gyroscope.h  ICM4xxxx.cpp  ICM4xxxx.h  L3GD20H.cpp  L3GD20H.h  LSM303.cpp  LSM303.h  LinuxGPS.cpp  LinuxGPS.h  MPU6050.cpp  MPU6050.h  MPU9150.cpp  MPU9150.h  Magnetometer.cpp  Magnetometer.h  README.md  SR04.cpp  SR04.h  Sensor.cpp  Sensor.h  Voltmeter.cpp  Voltmeter.h
flight/stabilizer/: AdjusterAI.cpp  AdjusterAI.h  BiquadFilter.h  DynamicNotchFilter.cpp  DynamicNotchFilter.h  EKF.cpp  EKF.h  EKFSmoother.cpp  EKFSmoother.h  Filter.h  FilterChain.h  IMU.cpp  IMU.h  MahonyAHRS.cpp  MahonyAHRS.h  PID.cpp  PID.h  PT1.h  SVFFilter.h  SensorFusion.h  Stabilizer.cpp  Stabilizer.h  StabilizerProxy.cpp  StabilizerProxy.h
flight/tests/: CMakeLists.txt  main.cpp
flight/video/: AvcodecEncoder.cpp  AvcodecEncoder.h  Camera.cpp  Camera.h  DRMFrameBuffer.cpp  DRMFrameBuffer.h  DRMSurface.cpp  DRMSurface.h  HUD.cpp  HUD.h  LinuxCamera.cpp  LinuxCamera.h  LiveOutput.cpp  LiveOutput.h  README.md  Raspicam.cpp  Raspicam.h  Recorder.cpp  Recorder.h  RecorderAvformat.cpp  RecorderAvformat.h  RecorderBasic.cpp  RecorderBasic.h  V4L2Encoder.cpp  V4L2Encoder.h  VideoEncoder.cpp  VideoEncoder.h
fpviewer/: CMakeLists.txt  Config.cpp  Matrix.cpp  RendererHUD.cpp  RendererHUD.h  RendererHUDNeo.cpp  RendererHUDNeo.h  config.lua  main.cpp
fpviewer/ADCs/: MCP320x.cpp  MCP320x.h
fpviewer/data/: .directory
joystick/: CMakeLists.txt  Socket.cpp  Socket.h  main.cpp
lib/boards/: CMakeLists.txt  README.md
lib/controller/: CMakeLists.txt  Controller.cpp  Controller.h  ControllerBase.h  PT1.h
lib/debug/: CMakeLists.txt  Debug.cpp  Debug.h  README.md
lib/hud/: CMakeLists.txt  Font.cpp  Font.h  RendererHUD.cpp  RendererHUD.h  RendererHUDNeo.cpp  RendererHUDNeo.h
lib/links/: CMakeLists.txt  Link.cpp  (+13 more)
libcontroller/: CMakeLists.txt  Controller.cpp  Controller.h  ControllerBase.cpp  ControllerBase.h  Filter.h  Thread.cpp  Thread.h
libdebug/: CMakeLists.txt  Debug.cpp  Debug.h
libhud/: CMakeLists.txt  RendererHUD.cpp  RendererHUD.h  RendererHUDNeo.cpp  RendererHUDNeo.h  font32.h
libluacore/: CMakeLists.txt  classes.auto.lua
librawwifi/: CMakeLists.txt  blocks.c  hamming.c  ieee80211_radiotap.h  interface.c  interface_linux.c  interface_win.c  lib.h  radiotap.c  radiotap.h  rawwifi.c  rawwifi.h  rx.c  rx_base.c  rx_weighted.c  tx.c  wifibroadcast.h
librawwifi++/: CMakeLists.txt  PcapHandler.h  RawWifi.cpp  RawWifiRx.cpp  constants.h  ieee80211_radiotap.h  radiotap.h
(+364 files in other folders)
